Changing Graphics Again

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,6 +1,6 @@
 /*-----------------------------------------------------------------------------------
 
-    Template Name: Exomac – Corporate Business Bootstrap 5 Template
+    Template Name: Cloud Ingenuity – Corporate Business Bootstrap 5 Template
     Version: 1.0
 
 -----------------------------------------------------------------------------------
