--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -29718,3 +29718,8 @@ textarea {
   border-top: 1px solid #3f5054;
   color: #fff;
   margin-bottom: 0; }
+
+
+  .about-paragraph {
+    font-size: 14px;
+  }
