--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -28304,6 +28304,9 @@ textarea {
   color: #1292ee;
   margin-bottom: 15px; }
 
+.about-paragraph {
+    font-size: 14px; }
+
 .about-funfact .text {
   font-size: 20px;
   line-height: 1.5;
@@ -29718,8 +29721,3 @@ textarea {
   border-top: 1px solid #3f5054;
   color: #fff;
   margin-bottom: 0; }
-
-
-  .about-paragraph {
-    font-size: 14px;
-  }
