--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -27050,6 +27050,73 @@ textarea {
       .section-title-two .title br {
         display: none; } }
 
+
+.section-title-three {
+position: relative;
+z-index: 99;
+margin-bottom: 30px; }
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .section-title-three {
+    margin-bottom: 30px; } }
+@media only screen and (max-width: 767px) {
+  .section-title-three {
+    margin-bottom: 30px; } }
+.section-title-three.color-light .title {
+  color: #cacaca; }
+.section-title-three.color-light .sub-title {
+  color: #fff; }
+.section-title-three .title {
+  font-size: 18px;
+  line-height: 1.5;
+  font-weight: 400;
+  color: #748494;
+  position: relative;
+  display: block;
+  padding-left: 85px;
+  margin-bottom: 25px; }
+  .section-title-three .title::before {
+    position: absolute;
+    content: "";
+    width: 70px;
+    height: 2px;
+    background-color: #1292ee;
+    left: 0;
+    bottom: 0; }
+.section-title-three .sub-title {
+  font-size: 32px;
+  line-height: 42px;
+  margin: 0;
+  color: #030f27; }
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .section-title-three .title {
+    font-size: 18px;
+    margin-bottom: 20px; }
+  .section-title-three .sub-title {
+    font-size: 30px; } }
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .section-title-three .title {
+    font-size: 18px;
+    margin-bottom: 20px; }
+  .section-title-three .sub-title {
+    font-size: 38px; } }
+@media only screen and (max-width: 767px) {
+  .section-title-three .title {
+    font-size: 16px;
+    margin-bottom: 10px; }
+  .section-title-three .sub-title {
+    font-size: 28px;
+    line-height: 36px; } }
+@media only screen and (max-width: 479px) {
+  .section-title-three .title {
+    font-size: 16px;
+    padding-left: 65px; }
+    .section-title-three .title::before {
+      width: 60px; }
+  .section-title-three .sub-title {
+    font-size: 26px;
+    line-height: 36px; }
+    .section-title-three .sub-title br {
+      display: none; } }
 /*----------------------------------------*/
 /*  03. Plugin Custom CSS
 /*----------------------------------------*/
