--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -29794,3 +29794,8 @@ margin-bottom: 30px; }
   border-top: 1px solid #3f5054;
   color: #fff;
   margin-bottom: 0; }
+
+  .custom-paragraph {
+    max-width: 10000px;
+    /* Add any additional styles you want to apply */
+  }
