--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -26858,7 +26858,7 @@ textarea {
 /* 07.01. Page Title CSS */
 .page-title-section {
   position: relative;
-  height: 530px;
+  height: 300px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -28600,6 +28600,7 @@ margin-bottom: 30px; }
 .progress-bar--one .progress-charts {
   margin-bottom: 20px;
   padding-bottom: 20px;
+  max-width: 2000px;
   overflow: hidden; }
 
 .progress-charts .heading {
